--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --hot --host 0.0.0.0"
- },
-  "author": "Jinsoo Park <ddwax89@gmail.com> (https://medium.com/@urangurang)",
+  },
   "license": "MIT",
   "dependencies": {
     "babel": "^6.23.0",
     "react": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^15.6.2",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.5"
@@ -21,6 +21,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.9",
     "webpack": "^1.15.0",
     "webpack-bundle-tracker": "0.0.93",
     "webpack-dev-server": "^1.16.5"
