--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "webpack-dev-server": "^1.16.5"
   },
   "devDependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
+    "react-axios": "^2.0.0",
     "webpack": "^1.15.0",
     "webpack-bundle-tracker": "0.0.93",
     "webpack-dev-server": "^1.16.5"
